[project]
name = "nodectl"
version = "0.1.0"
description = "Lightweight SSH-based H100 cluster scheduler"
authors = [
    { name = "yuweih205", email = "yuweih205@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
nodectl = "nodectl.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
